force-app/main/default/objects/DM_Material__c/fields/DM_Batch_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>DM_Batch_Lot_Number__c</fullName>
    <label>Batch / Lot Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>