force-app/main/default/objects/DM_Material__c/fields/DM_Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>DM_Cost_per_Unit__c</fullName>
    <formula>DM_Purchase_Amount__c / DM_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>