force-app/main/default/objects/DM_Material__c/fields/DM_Crop_Variety__c.field-meta.xml
<CustomField>
    <fullName>DM_Crop_Variety__c</fullName>
    <label>Crop Variety</label>
    <length>80</length>
    <type>Text</type>
</CustomField>