force-app/main/default/objects/DM_Material__c/fields/DM_Description__c.field-meta.xml
<CustomField>
    <fullName>DM_Description__c</fullName>
    <formula>DM_Purchase_Num__c + &quot; - &quot; +  DM_Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>