force-app/main/default/objects/DM_Material__c/fields/DM_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>DM_Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>