force-app/main/default/objects/DM_Material__c/fields/DM_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Purchase_Amount__c</fullName>
    <label>Purchase Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>