force-app/main/default/objects/DM_Material__c/fields/DM_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>