force-app/main/default/objects/DM_Material__c/fields/DM_Purchase_Num__c.field-meta.xml
<CustomField>
    <fullName>DM_Purchase_Num__c</fullName>
    <displayFormat>PUR-{0000}</displayFormat>
    <label>Purchase #</label>
    <type>AutoNumber</type>
</CustomField>