force-app/main/default/objects/DM_Material__c/fields/DM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>