force-app/main/default/objects/DM_Material__c/fields/DM_Quantity_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_Unit_of_Measure__c</fullName>
    <label>Quantity Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>Cubic Yards</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
            <value>
                <fullName>Tons</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Bushels</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>