force-app/main/default/objects/DM_Material__c/fields/DM_Received_in_Full__c.field-meta.xml
<CustomField>
    <fullName>DM_Received_in_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received in Full</label>
    <type>Checkbox</type>
</CustomField>