force-app/main/default/objects/DM_Material__c/fields/DM_Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>DM_Remaining_Balance__c</fullName>
    <formula>DM_Quantity__c - DM_Total_Quantity_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>