force-app/main/default/objects/DM_Material__c/fields/DM_Remaining_Inventory__c.field-meta.xml
<CustomField>
    <fullName>DM_Remaining_Inventory__c</fullName>
    <label>Remaining Inventory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>