force-app/main/default/objects/DM_Material__c/fields/DM_Shipments_Complete__c.field-meta.xml
<CustomField>
    <fullName>DM_Shipments_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipments Complete</label>
    <type>Checkbox</type>
</CustomField>