force-app/main/default/objects/DM_Material__c/fields/DM_Total_Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>DM_Total_Quantity_Received__c</fullName>
    <label>Total Quantity Received</label>
    <summarizedField>DM_Shipment__c.DM_Quantity_Received__c</summarizedField>
    <summaryForeignKey>DM_Shipment__c.DM_Material__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>