force-app/main/default/objects/DM_Material__c/fields/DM_Treatment_Required__c.field-meta.xml
<CustomField>
    <fullName>DM_Treatment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seed Treatment Required</label>
    <type>Checkbox</type>
</CustomField>