force-app/main/default/objects/DM_Material__c/fields/DM_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Crops</fullName>
                <default>true</default>
                <label>Cash Crops</label>
            </value>
            <value>
                <fullName>Cover Crops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>