force-app/main/default/objects/DM_Material__c/recordTypes/DM_Inputs.recordType-meta.xml
<RecordType>
    <fullName>DM_Inputs</fullName>
    <active>true</active>
    <description>Materials used as inputs (fertilizer, pesticides) for crop management.</description>
    <label>Inputs</label>
</RecordType>