force-app/main/default/objects/DM_Material__c/recordTypes/DM_Seed_Planting_Stock.recordType-meta.xml
<RecordType>
    <fullName>DM_Seed_Planting_Stock</fullName>
    <active>true</active>
    <description>Seeds or planting stock used to plant crops.</description>
    <label>Seed &amp; Planting Stock</label>
</RecordType>