force-app/main/default/objects/DM_Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Manufacturer__c</columns>
    <columns>DM_Batch_Lot_Number__c</columns>
    <columns>DM_Purchase_Date__c</columns>
    <columns>DM_Vendor__c</columns>
    <columns>DM_Received_in_Full__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>