force-app/main/default/objects/DM_Material__c/listViews/DM_Seeds_Planting_Stock.listView-meta.xml
<ListView>
    <fullName>DM_Seeds_Planting_Stock</fullName>
    <columns>NAME</columns>
    <columns>DM_Quantity__c</columns>
    <columns>DM_Manufacturer__c</columns>
    <columns>DM_Batch_Lot_Number__c</columns>
    <columns>DM_Purchase_Date__c</columns>
    <columns>DM_Vendor__c</columns>
    <columns>DM_Purchase_Num__c</columns>
    <columns>DM_Received_in_Full__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>DM_Material__c.DM_Seed_Planting_Stock</value>
    </filters>
    <label>Seeds &amp; Planting Stock</label>
</ListView>